<resources>
    <string name="app_name">Taiba</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">No options</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_studentcorner">Students Corner</string>
    <string name="menu_freemateriel">Free Materiel</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_appdevelp">App Developers</string>
    <string name="click_to_reach_the_content">Click to reach the content</string>
    <string name="testpaper_objective">TestPaper (objective)</string>
    <string name="testpaper_descriptive">TestPaper (Descriptive)</string>
    <string name="answer_key">Answer Key</string>
    <string name="notes">Notes</string>
    <string name="contact_us">Contact Us :</string>
    <string name="contactus_details">+917798636565 \n+917798684422 \ntaibacoachinginstitute@gmail.com</string>
    <string name="okay_dialog">okay !</string>
    <string name="events">EVENTS</string>
    <string name="teachers_day">Teachers Day</string>
    <string name="annual_tour">Annual Tour</string>
    <string name="farewell">Farewell</string>
    <string name="career_guidance">Career Guidance</string>
    <string name="felicitation">Felicitation</string>
    <string name="cancel">Cancel !</string>
    <string name="facilities">Facilities :</string>
    <string name="facilities_detail">- Well Qualified faculty \n- Weekly test\n(Objective Descriptive)\n- Surprise test \n- Digital teaching\n- Notes/test are provided on app \n- Library \n- Printed notes \n- Individual counselling \n- Good infrastructure \n- Guest lectures</string>
    <string name="faculty_info">Faculty Info</string>
    <string name="mohammad_mushfique">Mohammad Mushfique</string>
    <string name="biology_nm_sc_botany_b_ed_ph_d_n10_years_experience">BIOLOGY \nM.Sc(Botany), B.Ed, Ph.D* \n10 years experience</string>
    <string name="mohammad_tauseef">Mohammad Tauseef</string>
    <string name="mathematics_nm_sc_maths_goldmedal_m_phil_n5_years_experience">Mathematics \nM.Sc(Maths) (GoldMedal), M.Phil \n5 years experience</string>
    <string name="imran_shaikh">Imran Shaikh</string>
    <string name="physics_nb_e_mechanical_n10_years_experience">Physics \nB.E (Mechanical) \n10 years experience</string>
    <string name="arshiya_syed">Arshiya Syed</string>
    <string name="chemistry_nm_sc_chemistry_n3_years_experience">Chemistry \nM.Sc (Chemistry)\n3 years experience</string>
    <string name="fee_info">Fee Info</string>
    <string name="hsc_fee_11th_12th">1- HSC fee (11th+12th)</string>
    <string name="_10_000_per_subject">10,000/- per Subject</string>
    <string name="_2_neet_crash_course">2- NEET Crash Course</string>
    <string name="_15_000">15,000/-</string>
    <string name="_3_test_series">3- Test Series</string>
    <string name="_800_per_subject">800/- per Subject</string>
    <string name="address">ADDRESS :</string>
    <string name="addresdial_details">Lane No:06 \nNear Image Beauty Parlour \nJameel Colony \nAmravati (444601) \n+917798636565 : +917798684422</string>
    <string name="subjects_we_teach">Subjects we teach</string>
    <string name="neet">NEET</string>
    <string name="_12th_mh_board">12th (Mh-Board)</string>
    <string name="_11th_mh_board">11th (Mh-Board)</string>
    <string name="_11th_ncert">11th (NCERT)</string>
    <string name="generel_content">Generel Content</string>
    <string name="parents_meet">Parents Meet</string>
    <string name="projector_session">Projector Session</string>
    <string name="weekly_test">Weekly Test</string>
    <string name="our_toppers">Our Toppers</string>
    <string name="notifications">Notifications</string>
    <string name="enter_your_class_code">Enter your class code</string>
    <string name="enter_code_here">enter code here</string>
    <string name="submit">submit</string>
    <string name="taiba_coaching_inst">Taiba Coaching Inst.</string>
    <string name="taibacoachinginstitute_gmail_com">taibacoachinginstitute@gmail.com</string>
    <string name="mobilenum">+917798636565 : +917798684422</string>
</resources>
