<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home"
            />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_studentscorner"
            android:title="@string/menu_studentcorner" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_freemateriel"
            android:title="@string/menu_freemateriel" />
    </group>

    <item android:title="info">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_aboutus"
                    android:title="@string/menu_aboutus" />
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_appdevelp"
                    android:title="@string/menu_appdevelp" />
            </group>
        </menu>
    </item>
</menu>
