<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mushfique.taiba.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.mushfique.taiba.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.mushfique.taiba.ui.studentscorner.StudentsCornerFragment"
        android:label="@string/menu_studentcorner"
        tools:layout="@layout/fragment_studentscorner" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.mushfique.taiba.ui.freemateriel.FreematerielFragment"
        android:label="@string/menu_freemateriel"
        tools:layout="@layout/fragment_freemateriel" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.mushfique.taiba.ui.share.ShareFragment"
        android:label="@string/menu_aboutus"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.mushfique.taiba.ui.send.SendFragment"
        android:label="@string/menu_appdevelp"
        tools:layout="@layout/fragment_send" />
</navigation>