<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:gravity="center_vertical"
    android:background="@android:color/white"
    >

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fee_info"
        android:textStyle="bold"
        android:textSize="@dimen/bold_heading"
        android:layout_gravity="start"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorPrimary"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/bold_heading"
        android:text="@string/hsc_fee_11th_12th"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10_000_per_subject"
        android:layout_marginStart="20dp"
        android:textSize="16sp"
        />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/bold_heading"
        android:text="@string/_2_neet_crash_course"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_15_000"
        android:layout_marginStart="20dp"
        android:textSize="16sp"
        />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/bold_heading"
        android:text="@string/_3_test_series"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_800_per_subject"
        android:layout_marginStart="20dp"
        android:textSize="16sp"
        />



    <TextView
        android:id="@+id/txt_customdial_fee_okay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okay_dialog"
        android:textStyle="bold"
        android:textSize="@dimen/bold_heading"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        />

</LinearLayout>