<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:background="@android:color/white"
    android:padding="20dp"
    >

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facilities"
        android:textStyle="bold"
        android:textSize="@dimen/bold_heading"
        android:layout_marginBottom="5dp"
        android:textColor="@color/colorPrimary"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facilities_detail"
        android:layout_marginStart="20dp"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/txt_customdial_facilities_okay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okay_dialog"
        android:textStyle="bold"
        android:textSize="@dimen/bold_heading"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        />

</LinearLayout>