<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:padding="15dp"
    android:background="@android:color/white"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/events"
        android:textStyle="bold"
        android:textSize="@dimen/bold_heading"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorPrimary"
        />


    <LinearLayout
        android:id="@+id/events_opt_teachersday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbackground"
        android:layout_margin="10dp"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@mipmap/ic_events"
            app:civ_border_width="8dp"
            app:civ_border_color="@android:color/white"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teachers_day"
            android:textSize="@dimen/bold_heading"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/events_opt_annualtour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbackground"
        android:layout_margin="10dp"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@mipmap/ic_events"
            app:civ_border_width="8dp"
            app:civ_border_color="@android:color/white"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/annual_tour"
            android:textSize="@dimen/bold_heading"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/events_opt_farewell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbackground"
        android:layout_margin="10dp"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@mipmap/ic_events"
            app:civ_border_width="8dp"
            app:civ_border_color="@android:color/white"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/farewell"
            android:textSize="@dimen/bold_heading"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/events_opt_careerguid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbackground"
        android:layout_margin="10dp"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@mipmap/ic_events"
            app:civ_border_width="8dp"
            app:civ_border_color="@android:color/white"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/career_guidance"
            android:textSize="@dimen/bold_heading"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/events_opt_felicitation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbackground"
        android:layout_margin="10dp"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@mipmap/ic_events"
            app:civ_border_width="8dp"
            app:civ_border_color="@android:color/white"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/felicitation"
            android:textSize="@dimen/bold_heading"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_customdial_events_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textStyle="bold"
        android:textSize="@dimen/bold_heading"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="end"
        android:layout_marginTop="15dp"
        />

</LinearLayout>